fix: schema for item, since it's o2o edge need to be singular
